#include "benchmark/workloads/workload.h"

class FFT : public Workload {
	//TODO
};




